--- a/store/public/index.html
+++ b/store/public/index.html
@@ -25,12 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- font awesome -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
-      integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"/>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css"/>
+
     <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Oswald|Permanent+Marker"
