--- a/store/public/index.html
+++ b/store/public/index.html
@@ -35,7 +35,7 @@
     />
     <title>Store App</title>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
